Now user can edit his or her city, state, country, interests.

--- a/microblog/app/templates/edit.html
+++ b/microblog/app/templates/edit.html
@@ -27,6 +27,23 @@
             <td>Phone:</td>
             <td>{{form.phone(size = 32)}}</td>
         </tr>
+<!-- we need to invert city, state, country, area to select style -->
+        <tr>
+            <td>City:</td>
+            <td>{{form.city(size = 32)}}</td>
+        </tr>
+        <tr>
+            <td>State:</td>
+            <td>{{form.state(size = 32)}}</td>
+        </tr>
+        <tr>
+            <td>Country:</td>
+            <td>{{form.country(size = 32)}}</td>
+        </tr>
+        <tr>
+            <td>Area of Intersts:</td>
+            <td>{{form.area(size = 32)}}</td>
+        </tr>
         <tr>
             <td>About yourself:</td>
             <td>{{form.about_me(cols = 32, rows = 4)}}</td>
