Now user can send messages from other's profile. What need to do further is make a "messagebox" for user(which means "g.user").

--- a/microblog/app/templates/base.html
+++ b/microblog/app/templates/base.html
@@ -1,9 +1,9 @@
 <html>
   <head>
     {% if title %}
-    <title>{{title}} - microblog</title>
+    <title>{{title}} - Travel Connect</title>
     {% else %}
-    <title>microblog</title>
+    <title>Travel Connect</title>
     {% endif %}
   </head>
   <body>
