--- a/microblog/app/templates/user.html
+++ b/microblog/app/templates/user.html
@@ -17,6 +17,7 @@
             {% if user.about_me %}<p>About_me: {{user.about_me}}</p>{% endif %}
             {% if user.last_seen %}<p><i>Last seen on: {{user.last_seen}}</i></p>{% endif %}
             {% if user.id == g.user.id %}<p><a href="{{url_for('edit')}}">Edit</a></p>{% endif %}
+            {% if user.id != g.user.id %}<p><a href="/message/{{nickname}}">Send a Message</a></p>{% endif %}
         </td>
     </tr>
 </table>
