Now user can see his or her own MessageBox. User can find who he or she sent or received messages, and choose someone and send message again.
Still some bugs about MessageBox, but it works now.

--- a/microblog/app/templates/gusermessage.html
+++ b/microblog/app/templates/gusermessage.html
@@ -4,6 +4,6 @@
 {% block content %}
 
 {% for message in messages %}
-    {% include 'messagehistory.html' %}
+    {% include 'gusermessagehistory.html' %}
 {% endfor %}
 {% endblock %}
