new today! if someon receive some message, he can get a notification.

--- a/microblog/app/templates/gusermessage.html
+++ b/microblog/app/templates/gusermessage.html
@@ -3,7 +3,9 @@
 
 {% block content %}
 
-{% for message in messages %}
+{% for l in lists %}
+{% if l %}
     {% include 'gusermessagehistory.html' %}
+{% endif %}
 {% endfor %}
 {% endblock %}
