--- a/microblog/app/templates/base.html
+++ b/microblog/app/templates/base.html
@@ -11,6 +11,9 @@
         <a href="{{ url_for('index') }}">Home</a>
         {% if g.user.is_authenticated() %}
         | <a href="{{ url_for('user', nickname = g.user.nickname) }}">Your Profile</a>
+        {% if newmessage == 1 %}
+        | <a href="/message/{{g.user.nickname}}">new message!</a>
+        {% endif %}
         | <a href="{{ url_for('logout') }}">Logout</a>
         {% endif %}
     </div>
