--- a/microblog/app/templates/gusermessagehistory.html
+++ b/microblog/app/templates/gusermessagehistory.html
@@ -1,7 +1,10 @@
 <table>
     <tr valign="top">
-        <td><img src="{{message.get_sender().avatar(50)}}"></td>
-        <td>{{message.get_sender().nickname}}</td>
-        <td><a href="/message/{{message.get_sender().nickname}}">View the history messages</a></td>
+        <td><img src="{{l.avatar(50)}}"></td>
+        <td>{{l.nickname}}</td>
+        {% if l.user_new(user) == 1 %}
+        <td><b>New message here!</b></td>
+        {% endif %}
+        <td><a href="/message/{{l.nickname}}">View the history messages</a></td>
     </tr>
 </table>
