--- a/microblog/app/templates/gusermessagehistory.html
+++ b/microblog/app/templates/gusermessagehistory.html
@@ -2,7 +2,7 @@
     <tr valign="top">
         <td><img src="{{l.avatar(50)}}"></td>
         <td>{{l.nickname}}</td>
-        {% if l.user_new(user) == 1 %}
+        {% if l.user_new(user) == True %}
         <td><b>New message here!</b></td>
         {% endif %}
         <td><a href="/message/{{l.nickname}}">View the history messages</a></td>
