creating search engine

--- a/microblog/app/templates/search.html
+++ b/microblog/app/templates/search.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 	<h1>Search for travel advice.</h1><br>
-	<form action="/search_results/<query>" method="get" name="search">
+	<form action="/search_results/" method="post" name="search">
 		<p>
 		{{ form.hidden_tag() }}
 
