--- a/microblog/app/static/css/travel.css
+++ b/microblog/app/static/css/travel.css
@@ -615,8 +615,8 @@ a:focus {
 }
 
 .container {
-  margin-right: auto;
-  margin-left: auto;
+  margin-right: 10px;
+  margin-left: 10px;
   *zoom: 1;
 }
 
@@ -838,7 +838,7 @@ ol.inline {
   list-style: none;
 }
 
-ul.inline > li,
+ul.in > li,
 ol.inline > li {
   display: inline-block;
   *display: inline;
@@ -2140,11 +2140,13 @@ table {
 
 .table-striped tbody > tr:nth-child(even) > td,
 .table-striped tbody > tr:nth-child(even) > th {
-  background-color: #f9f9f9;
+  background-color: #ffffff;
 }
-.table-striped tbody > tr:nth-child(odd) > td,
+.table-striped tbody > tr:nth-child(odd) > td{
+  background-color: #ffffff;
+}
 .table-striped tbody > tr:nth-child(odd) > th {
-  background-color: #B9B5B5;
+  background-color: #2FAAF3;
 }
 
 .table-hover tbody tr:hover > td,
@@ -3397,14 +3399,19 @@ input[type="button"].btn-block {
 .btn-warning {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  background-color: #faa732;
-  *background-color: #f89406;
-  background-image: -moz-linear-gradient(top, #fbb450, #f89406);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fbb450), to(#f89406));
-  background-image: -webkit-linear-gradient(top, #fbb450, #f89406);
-  background-image: -o-linear-gradient(top, #fbb450, #f89406);
-  background-image: linear-gradient(to bottom, #fbb450, #f89406);
-  background-repeat: repeat-x;
+  background-color: #4B8CF6;
+  *background-color: #4B8CF6;
+  background-image: -moz-linear-gradient(top, #4B8CF6, #4B8CF6);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4B8CF6), to(#4B8CF6));
+  background-image: -webkit-linear-gradient(top, #4B8CF6, #4B8CF6);
+  background-image: -o-linear-gradient(top, #4B8CF6, #4B8CF6);
+  background-image: linear-gradient(to bottom, #4B8CF6, #4B8CF6);
+
+/*  background-image: url("/static/TravelImages/google.png");
+  background-repeat: no-repeat;
+  background-size:100% 100%;
+  text-align: center;*/
+
   border-color: #f89406 #f89406 #ad6704;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fffbb450', endColorstr='#fff89406', GradientType=0);
@@ -3418,7 +3425,7 @@ input[type="button"].btn-block {
 .btn-warning.disabled,
 .btn-warning[disabled] {
   color: #ffffff;
-  background-color: #f89406;
+  background-color: #4B8CF6;
   *background-color: #df8505;
 }
 
@@ -3430,14 +3437,17 @@ input[type="button"].btn-block {
 .btn-danger {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  background-color: #da4f49;
-  *background-color: #bd362f;
-  background-image: -moz-linear-gradient(top, #ee5f5b, #bd362f);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ee5f5b), to(#bd362f));
-  background-image: -webkit-linear-gradient(top, #ee5f5b, #bd362f);
-  background-image: -o-linear-gradient(top, #ee5f5b, #bd362f);
-  background-image: linear-gradient(to bottom, #ee5f5b, #bd362f);
-  background-repeat: repeat-x;
+  background-color: #4101AF;
+  *background-color: #4101AF;
+  background-image: -moz-linear-gradient(top, #4101AF, #4101AF);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4101AF), to(#4101AF));
+  background-image: -webkit-linear-gradient(top, #4101AF, #4101AF);
+  background-image: -o-linear-gradient(top, #4101AF, #4101AF);
+  background-image: linear-gradient(to bottom, #4101AF, #4101AF);
+  background-repeat: no-repeat;
+
+  /*Yahoo image*/
+
   border-color: #bd362f #bd362f #802420;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffee5f5b', endColorstr='#ffbd362f', GradientType=0);
@@ -3451,8 +3461,9 @@ input[type="button"].btn-block {
 .btn-danger.disabled,
 .btn-danger[disabled] {
   color: #ffffff;
-  background-color: #bd362f;
+  background-color: #4101AF;
   *background-color: #a9302a;
+  /*click color change*/
 }
 
 .btn-danger:active,
@@ -3465,13 +3476,13 @@ input[type="button"].btn-block {
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #5bb75b;
   *background-color: #51a351;
-  background-image: -moz-linear-gradient(top, #62c462, #51a351);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#62c462), to(#51a351));
-  background-image: -webkit-linear-gradient(top, #62c462, #51a351);
-  background-image: -o-linear-gradient(top, #62c462, #51a351);
-  background-image: linear-gradient(to bottom, #62c462, #51a351);
+  background-image: -moz-linear-gradient(top, #AACE59, #AACE59);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#AACE59), to(#AACE59));
+  background-image: -webkit-linear-gradient(top, #AACE59, #AACE59);
+  background-image: -o-linear-gradient(top, #AACE59, #AACE59);
+  background-image: linear-gradient(to bottom, #AACE59, #AACE59);
   background-repeat: repeat-x;
-  border-color: #51a351 #51a351 #387038;
+  border-color: #AACE59 #AACE59 #AACE59;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff62c462', endColorstr='#ff51a351', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
@@ -3484,7 +3495,7 @@ input[type="button"].btn-block {
 .btn-success.disabled,
 .btn-success[disabled] {
   color: #ffffff;
-  background-color: #51a351;
+  background-color: #AACE59;
   *background-color: #499249;
 }
 
@@ -4397,8 +4408,8 @@ input[type="submit"].btn.btn-mini {
 
 .navbar-inner:before,
 .navbar-inner:after {
-  display: table;
-  line-height: 0;
+  display: table;/*
+  line-height: 0;*/
   content: "";
 }
 
@@ -4795,20 +4806,25 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar-inverse .navbar-inner {
-  background-color: #1b1b1b;
-  background-image: -moz-linear-gradient(top, #222222, #111111);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#222222), to(#111111));
-  background-image: -webkit-linear-gradient(top, #222222, #111111);
-  background-image: -o-linear-gradient(top, #222222, #111111);
-  background-image: linear-gradient(to bottom, #222222, #111111);
+  background-color: #0d47a1;
+  background-image: -moz-linear-gradient(top, #0d47a1, #0d47a1);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0d47a1), to(#0d47a1));
+  background-image: -webkit-linear-gradient(top, #0d47a1, #0d47a1);
+  background-image: -o-linear-gradient(top, #0d47a1, #0d47a1);
+  background-image: linear-gradient(to bottom, #0d47a1, #0d47a1);
   background-repeat: repeat-x;
-  border-color: #252525;
+  border-color: #0d47a1;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff222222', endColorstr='#ff111111', GradientType=0);
+}
+
+.navbar-inverse .navbar-innerhome {
+  background:none;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff222222', endColorstr='#ff111111', GradientType=0);
 }
 
 .navbar-inverse .brand,
 .navbar-inverse .nav > li > a {
-  color: #999999;
+  color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
 
@@ -4820,11 +4836,11 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar-inverse .brand {
-  color: #999999;
+  color: #ffffff;
 }
 
 .navbar-inverse .navbar-text {
-  color: #999999;
+  color: #111111;
 }
 
 .navbar-inverse .nav > li > a:focus,
@@ -4837,11 +4853,11 @@ input[type="submit"].btn.btn-mini {
 .navbar-inverse .nav .active > a:hover,
 .navbar-inverse .nav .active > a:focus {
   color: #ffffff;
-  background-color: #111111;
+/*  background-color: #666699;*/
 }
 
 .navbar-inverse .navbar-link {
-  color: #999999;
+  color: #ffffff;
 }
 
 .navbar-inverse .navbar-link:hover,
@@ -6123,15 +6139,27 @@ a.badge:focus {
 
 .hero-unit {
   padding: 60px;
-  margin-bottom: 30px;
+/*  margin-top: -40px;
+  margin-right: -30px;
+  margin-left: -10px;
+  margin-bottom: 10px;*/
   font-size: 18px;
   font-weight: 200;
   line-height: 30px;
   color: inherit;
-  background-color: #eeeeee;
-  -webkit-border-radius: 6px;
+  position:absolute;
+  left:0px;
+  top:0px; 
+/*
+put the picture to the left top
+*/
+  background-image: url("/static/TravelImages/home.jpg");
+  background-repeat:no-repeat;
+  background-size:100% 100%;
+  opacity: 0.75
+/*  -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
-          border-radius: 6px;
+          border-radius: 6px;*/
 }
 
 .hero-unit h1 {
@@ -6139,8 +6167,17 @@ a.badge:focus {
   font-size: 60px;
   line-height: 1;
   letter-spacing: -1px;
-  color: inherit;
+  color: #ffffff;
 }
+
+.hero-unit h3 {
+  color: #6F6D6D;
+}
+
+.hero-unit h5{
+  color: #ffffff;
+}
+
 
 .hero-unit li {
   line-height: 30px;
@@ -6168,4 +6205,11 @@ a.badge:focus {
 
 .affix {
   position: fixed;
+}
+
+.newhero {
+  position: relative;
+  top: 485px;
+  left: -10px;
+  margin-right: -30px;
 }
