--- a/microblog/app/templates/basehome.html
+++ b/microblog/app/templates/basehome.html
@@ -12,7 +12,6 @@
                                 body {
                                     padding-top: 60px;
                                     padding-bottom: 40px;
-
                                 }
 
                             </style>
@@ -35,7 +34,7 @@
  
 
 <div class="navbar navbar-inverse navbar-fixed-top" >
-     <div class="navbar-inner">
+     <div class="navbar-innerhome">
          <div class="container">
              <a class="brand" href="{{ url_for('index') }}">Travel Connection</a>
              <div class="nav nav-pills pull-right">
