--- a/microblog/app/templates/user.html
+++ b/microblog/app/templates/user.html
@@ -16,12 +16,14 @@
                                 body {
                                     padding-top: 60px;
                                     padding-bottom: 40px;
+                                    background-color: #ECF0F2;
                                 }
-                            
+        
                             /* Custom container */
                             .container-narrow {
                                 margin: 0 auto;
                                 max-width: 700px;
+                                background-color: #DCE3E6;
                             }
                             .container-narrow > hr {
                                 margin: 30px 0;
@@ -33,16 +35,16 @@
                                 text-align: center;
                             }
                             .jumbotron h1 {
-                                font-size: 72px;
-                                line-height: 1;
+                                font-size: 40px;
+                                line-height: 2.5;
                             }
                             .jumbotron .userphoto {
                                 display: block;
                                 float: left;
-                                margin-top: -20px;
+                                margin-top: 30px;
                                 margin-left: 40px;
                                 margin-right: -40px;
-                                margin-bottom: 8px;
+                                margin-bottom: 30px;
                             }
                             .jumbotron .btn {
                                 font-size: 21px;
@@ -77,7 +79,6 @@
     
     <body>
         <div class="container-narrow">
-            <hr>
             <div class="jumbotron">
                 <div class="userphoto"><img src="{{user.avatar(128)}}" width="100" height="100" alt="default avatar">
                     </div>
@@ -87,19 +88,23 @@
             <hr>
             
             <div class="row-fluid marketing">
-                <div class="nav nav-pills pull-right">
-                    <div class="nav-collapse collapse">
+<!--                 <div class="nav nav-pills pull-right" style="margin-right: 50px"> -->
                         {% if user.id == g.user.id %}
-                        <p><font size="5"><button class="btn btn-primary" type="button" onclick="location.href='{{url_for('edit')}}'" >Edit</button></font></p>
+                        <p><font size="4"><button class="btn btn-primary" type="button" onclick="location.href='{{url_for('edit')}}'" >Edit</button></font></p>
                         {% else %}
-                        <p><font size="5"><button class="btn btn-primary" type="button" onclick="location.href='/message/{{nickname}}'" >Chat Now!</button></font></p>
+                        <p><font size="4"><button class="btn btn-primary" type="button" onclick="location.href='/message/{{nickname}}'" >Chat Now!</button></font></p>
                         {% endif %}
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Average Rating: {{averagerate}} <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
+<!--                 </div>
+
+                <div class="nav nav-pills pull-right"> -->
+                    <div class="nav-collapse collapse" style=" margin-bottom: 28px"> 
+                        <a href="#Comments" class="dropdown-toggle" data-toggle="dropdown"><font size="3">Average Rating: {{averagerate}} 
+                            <b class="caret"></b></font></a>
+<!--                         <ul class="dropdown-menu">
                             <li><a href="#Comments">View all comments</a>
-                                             </li>
-                                        </ul>
-                    </div>
+                            </li>
+                        </ul> -->
+<!--                     </div> -->
                 </div>
                 {% if user.firstname %}
                 <h4>Name</h4>
@@ -156,10 +161,10 @@
                 
                 <h4><a name="Comments">Feedback Rating</a></h4>
                 
-                <table class="table table-striped" style="table-layout: fixed; width: 100%">
-                    <col width="40">
-                        <col width="30">
-                            <col width="110">
+                <table class="table table-striped" style="table-layout: fixed; width: 92%">
+                    <col width="70">
+                        <col width="40">
+                            <col width="100">
                                 <tr>
                                     <th>Username</th>
                                     <th>Rating</th>
@@ -183,7 +188,7 @@
             <hr>
             
             <div class="footer">
-                <p>&copy; Company 2014</p>
+                <p>&copy; Travel Team</p>
             </div>
         </div> <!-- /container -->
         
